test/compile_errors/stage1/obj/issue_5618_coercion_of_optional_anyopaque_to_anyopaque_must_fail.zig
export fn foo() void {
    var u: ?*anyopaque = null;
    var v: *anyopaque = undefined;
    v = u;
}

// Issue #5618: coercion of ?*anyopaque to *anyopaque must fail.
//
// tmp.zig:4:9: error: cannot convert optional to payload type. consider using `.?`, `orelse`, or `if`. expected type '*anyopaque', found '?*anyopaque'
